--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <title>JJMex Community | Enlaces Oficiales</title>
     <style>
         :root {
-            /* Palette Dark Minimalist */
+            /* Tema Oscuro Minimalista */
             --bg-color: #0d1117;
             --card-bg: #161b22;
             --text-main: #e6edf3;
             --text-muted: #8b949e;
             --border: #30363d;
             
-            /* Brand Colors */
+            /* Colores de Marca */
             --telegram: #229ED9;
             --whatsapp: #25D366;
-            --accent: #58a6ff;
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -70,7 +69,7 @@
         /* --- CONTENEDOR PRINCIPAL --- */
         .container {
             width: 100%;
-            max-width: 600px; /* Ancho más estrecho tipo Linktree */
+            max-width: 600px;
             padding: 0 20px 40px;
             display: flex;
             flex-direction: column;
@@ -86,9 +85,10 @@
             margin-bottom: 5px;
             font-weight: 600;
             text-align: center;
+            opacity: 0.8;
         }
 
-        /* --- TARJETAS DE GRUPO --- */
+        /* --- TARJETAS --- */
         .card {
             background-color: var(--card-bg);
             border: 1px solid var(--border);
@@ -138,7 +138,7 @@
             line-height: 1.4;
         }
 
-        /* --- ETIQUETAS Y DETALLES --- */
+        /* --- ETIQUETAS --- */
         .tag {
             font-size: 0.7rem;
             padding: 2px 8px;
@@ -153,6 +153,7 @@
         .arrow {
             color: var(--text-muted);
             opacity: 0.5;
+            font-size: 1.2rem;
         }
 
         /* --- FOOTER --- */
@@ -172,18 +173,18 @@
     <header>
         <div class="profile-pic">🇲🇽</div>
         <h1>JJMex Community</h1>
-        <p class="subtitle">Red de inteligencia colectiva y crecimiento personal. Únete a nuestros canales oficiales.</p>
+        <p class="subtitle">Comunidad oficial de reportes, movilidad y crecimiento personal.</p>
     </header>
 
     <div class="container">
         
-        <div class="section-label">Canales Oficiales (Telegram)</div>
+        <div class="section-label">Grupos de Telegram</div>
 
         <a href="https://t.me/AlertasMetroCDMX" target="_blank" class="card">
             <div class="icon-box">🚇</div>
             <div class="content">
-                <h3>Alertas Metro CDMX <span class="tag tg-tag">Telegram</span></h3>
-                <p>Reportes en tiempo real sobre el estatus de movilidad. Comunidad activa para anticipar retrasos en las 12 líneas.</p>
+                <h3>Alertas metro CDMX <span class="tag tg-tag">Telegram</span></h3>
+                <p>Grupo inteligente para reportar el status actual del sistema de movilización. Información conjunta en tiempo real.</p>
             </div>
             <div class="arrow">➜</div>
         </a>
@@ -191,8 +192,8 @@
         <a href="https://t.me/CVACDMX" target="_blank" class="card">
             <div class="icon-box">🛣️</div>
             <div class="content">
-                <h3>Alertas Viales (ACA-CVA-CDMX) <span class="tag tg-tag">Telegram</span></h3>
-                <p>Monitor de la Autopista del Sol. Apoyo comunitario para reportar incidentes, bloqueos y tráfico en el trayecto.</p>
+                <h3>Alertas viales <span class="tag tg-tag">Telegram</span></h3>
+                <p>Apoyo comunitario para reportar incidentes en el trayecto Acapulco - Cuernavaca - CDMX. Últimas noticias del tramo carretero.</p>
             </div>
             <div class="arrow">➜</div>
         </a>
@@ -200,19 +201,19 @@
         <a href="https://t.me/MenteExito" target="_blank" class="card">
             <div class="icon-box">🐺</div>
             <div class="content">
-                <h3>Mente & Éxito 365 <span class="tag tg-tag">Telegram</span></h3>
-                <p>Círculo de alto rendimiento. Dosis diaria de estoicismo, anécdotas y tips para construir tu mejor versión.</p>
+                <h3>Mente & Exito 365 <span class="tag tg-tag">Telegram</span></h3>
+                <p>Imágenes, anécdotas y tips para crecer y alcanzar la mejor versión de nosotros mismos.</p>
             </div>
             <div class="arrow">➜</div>
         </a>
 
-        <div class="section-label">Red de Apoyo (WhatsApp)</div>
+        <div class="section-label">Grupos de WhatsApp</div>
 
         <a href="#" class="card">
             <div class="icon-box">🚙</div>
             <div class="content">
-                <h3>Monitor CVA-CDMX (Grupo 1) <span class="tag wa-tag">WhatsApp</span></h3>
-                <p>Grupo exclusivo para reportes viales en el tramo Cuernavaca - Ciudad de México.</p>
+                <h3>Alertas viales (Grupo 1) <span class="tag wa-tag">WhatsApp</span></h3>
+                <p>Reportes de la comunidad enfocados solamente en el tramo Cuernavaca a Ciudad de México.</p>
             </div>
             <div class="arrow">➜</div>
         </a>
@@ -220,8 +221,8 @@
         <a href="#" class="card">
             <div class="icon-box">🚙</div>
             <div class="content">
-                <h3>Monitor CVA-CDMX (Grupo 2) <span class="tag wa-tag">WhatsApp</span></h3>
-                <p>Canal de respaldo comunitario para alertas de tráfico y seguridad vial.</p>
+                <h3>Alertas viales (Grupo 2) <span class="tag wa-tag">WhatsApp</span></h3>
+                <p>Grupo adicional de respaldo para reportes comunitarios del tramo Cuernavaca a CDMX.</p>
             </div>
             <div class="arrow">➜</div>
         </a>
@@ -229,7 +230,7 @@
     </div>
 
     <footer>
-        <p>© 2026 JJMex Community. Todos los derechos reservados.</p>
+        <p>© 2026 JJMex Community.</p>
     </footer>
 
 </body>
