--- a/index.html
+++ b/index.html
@@ -34,22 +34,24 @@
         /* --- HEADER --- */
         header {
             text-align: center;
-            padding: 80px 20px 40px;
+            padding: 40px 20px 20px; /* Reduje el padding superior */
             width: 100%;
             background: radial-gradient(circle at top, #1f2428 0%, transparent 70%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        .profile-pic {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background: #21262d;
-            margin: 0 auto 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 3rem;
-            border: 2px solid var(--border);
+        /* Estilos del Banner */
+        .banner-img {
+            width: 100%;
+            max-width: 600px; /* Mismo ancho que el contenedor */
+            height: auto;
+            border-radius: 16px;
+            margin-bottom: 25px;
+            border: 1px solid var(--border);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            object-fit: cover;
         }
 
         h1 {
@@ -171,7 +173,8 @@
 <body>
 
     <header>
-        <div class="profile-pic">🇲🇽</div>
+        <img src="https://raw.githubusercontent.com/JJMex/JJMex/main/Banner.png" alt="JJMex Banner" class="banner-img">
+        
         <h1>JJMex Community</h1>
         <p class="subtitle">Comunidad oficial de reportes, movilidad y crecimiento personal.</p>
     </header>
